# RC_Control

./: .gitmodules  CMakeLists.txt  EngineController.sln  README.md
Arduino/: LEDCFade.ino
ESP32_code/: ESP32_code.ino
EngineController/: EngineController.vcxproj  EngineController.vcxproj.filters  Source.c  joyPoll.c
EngineController/x64/Debug/: EngineController.exe.recipe  EngineController.ilk  vc143.idb
EngineController/x64/Debug/EngineController.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  EngineController.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
includes/: BLEClient.h  throttleinput.h
includes/pthreads-win32/: md5.sum  sha512.sum
includes/pthreads-win32/Contrib/: README  md5.sum  sha512.sum
includes/pthreads-win32/QueueUserAPCEx/: md5.sum  sha512.sum
includes/pthreads-win32/QueueUserAPCEx/driver/: ChangeLog  md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-1-11-0-release/: md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-1-5-0-release/: md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-1-6-0-release/: md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-1-7-0-release/: md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-1-8-0-release/: md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-1-9-0-release/: md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-2-1-0-release/: ANNOUNCE  ChangeLog  NEWS  md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-2-2-0-release/: ANNOUNCE  ChangeLog  NEWS  md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-2-3-0-release/: ChangeLog  NEWS  md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-2-4-0-release/: md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-2-5-0-release/: md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-2-6-0-release/: md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-2-7-0-release/: md5.sum  sha512.sum
includes/pthreads-win32/prebuilt-dll-2-8-0-release/: md5.sum  sha512.sum
includes/pthreads-win32/pthreads-dll-2002-03-02/: ANNOUNCE  BUGS  md5.sum  sha512.sum
includes/pthreads-win32/pthreads-dll-2002-11-04/: md5.sum  sha512.sum
includes/pthreads-win32/pthreads-dll-2003-05-10/: ANNOUNCE  NEWS  md5.sum  sha512.sum
includes/pthreads-win32/pthreads-dll-2003-08-19/: ANNOUNCE  ChangeLog  NEWS  md5.sum  sha512.sum
includes/pthreads-win32/pthreads-dll-2003-09-03/: ANNOUNCE  ChangeLog  NEWS  README  md5.sum  sha512.sum
includes/pthreads-win32/pthreads-dll-2003-09-04/: ANNOUNCE  ChangeLog  NEWS  md5.sum  sha512.sum
includes/pthreads-win32/pthreads-dll-2003-09-18/: md5.sum  sha512.sum
includes/pthreads-win32/pthreads-dll-2004-05-16/: ANNOUNCE  CONTRIBUTORS  ChangeLog  FAQ  md5.sum  sha512.sum
includes/pthreads-win32/pthreads-dll-2004-06-22/: ANNOUNCE  BUGS  ChangeLog  README  md5.sum  sha512.sum
includes/pthreads-win32/pthreads-dll-2004-11-22/: md5.sum  sha512.sum
includes/pthreads-win32/pthreads-dll-2005-01-03/: ANNOUNCE  ChangeLog  NEWS  md5.sum  sha512.sum
includes/pthreads-win32/pthreads-dll-2005-03-08/: md5.sum  sha512.sum
src/: BLEClient.c  JoyRead.c  main.c  mainBLE.c  peripheral.c  scan.c  threadaj.c  throttleinput.c
(+128 files in other folders)
